<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/back_details_button"
        android:layout_width="71dp"
        android:layout_height="wrap_content"
        android:text="@string/blank"
        android:layout_margin="10dp"
        app:icon="@drawable/baseline_arrow_back_24"
        android:layout_gravity="top"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="258dp"
        android:layout_height="258dp"
        android:contentDescription="@string/imagen_del_pokemon"
        android:scaleType="centerInside"
        android:paddingTop="?attr/actionBarSize"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/pokemon_name" />

    <TextView
        android:id="@+id/indice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/pokemon_indice" />

    <TextView
        android:id="@+id/types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pokemon_types" />
    <TextView
        android:id="@+id/altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pokemon_altura" />

    <TextView
        android:id="@+id/peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pokemon_peso" />


</LinearLayout>