<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">

    <data>

        <variable
            name="Pokemon"
            type="com.jcpf.mispokemons.PokemonData" />
    </data>

    <!-- No le pong android:layout_height="100dp" por que al compilar dice que ya lo tiene puesto -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp">

        <LinearLayout
            android:id="@+id/card_pokemon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="50dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/imagen_del_pokemon"
                android:src="@drawable/ic_launcher_background" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pokemon_name"
                    android:textSize="20sp"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/type"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pokemon_type"
                    android:textSize="15sp"
                    android:typeface="normal" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:contentDescription="@string/boton_para_borrar_el_pokemon"
                app:srcCompat="@drawable/baseline_delete_24" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>